<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.neighbour_list.DetailsNeighbourActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/greyBackground">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_layout_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_collapseMode="pin"/>

                <ImageView
                    android:id="@+id/photo_neighbour"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:contentDescription="@string/photo_neighbour"
                    app:layout_collapseMode="parallax"/>

                <ImageView
                    android:id="@+id/button_arrow_backward"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    style="@style/ImageView"
                    android:fitsSystemWindows="true"
                    android:contentDescription="@string/content_button_arrow_backward"
                    app:layout_collapseMode="pin"/>

                <TextView
                    android:id="@+id/textView_name_neighbour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.apparenceTitle"
                    app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorits"
        style="@style/FloatingActionButton.default"
        app:backgroundTint="@color/greyBackground"
        android:scaleType="center"
        app:layout_anchor="@id/collapsing_layout_detail"
        app:layout_anchorGravity="bottom|right|end" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <android.support.v7.widget.CardView
                android:id="@+id/CardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/textView_name_neighbour2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/name_neighbour"
                        android:layout_marginBottom="25dp"
                        style="@style/TextAppearance.AppCompat.Headline."/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="20dp">

                        <ImageButton
                            android:id="@+id/icon_adress"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@drawable/ic_place_pink_24dp"
                            android:contentDescription="@string/icon_place"/>

                        <TextView
                            android:id="@+id/textView_adress_neighbour"
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            style="@style/TextAppearance.AppCompat"
                            android:text="@string/adress_neighbour"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="20dp">

                        <ImageButton
                            android:id="@+id/icon_phone"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:background="@drawable/ic_call_pink_24dp"
                            android:contentDescription="@string/icon_phone" />

                        <TextView
                            android:id="@+id/textView_phone_neighbour"
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            style="@style/TextAppearance.AppCompat"
                            android:text="@string/phone_neighbour"/>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_marginBottom="20dp">

                            <ImageButton
                                android:id="@+id/icon_url"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:background="@drawable/ic_language_pink_24dp"
                                android:contentDescription="@string/icon_url" />

                            <TextView
                                android:id="@+id/textView_url_neighbour"
                                android:layout_width="match_parent"
                                android:layout_height="24dp"
                                style="@style/TextAppearance.AppCompat"
                                android:text="@string/url_neighbour"/>

                        </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/CardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titre_description"
                        style="@style/TextAppearance.AppCompat.Headline."/>

                    <TextView
                        android:id="@+id/textView_description_neighbour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/describe_me"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
